<resources>
    <string name="app_name">Lab6_minhnqph31902</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Register">Register</string>
    <string name="camera_rationale">Camera</string>
    <string name="storage_rationale">Storage</string>
    <string name="returned_from_app_settings">setting</string>
    <string name="txt_please_choose_province_first">Hãy chọn province trước</string>
    <string name="txt_please_choose_district_first">Hãy chọn district trước</string>
    <string name="txt_not_enough_info_yet">Chưa chọn đủ thông tin</string>
    <string name="txt_add_fruit_success">Add fruit success</string>
    <string name="txt_add_fruit_failed">Add fruit failed</string>
    <string name="txt_please_fill_all_fields">Please fill all fields</string>
    <string name="txt_task_cancelled">Task Cancelled</string>
    <string name="txt_total_fruits">Total: %1d fruits</string>
    <string name="txt_enter_username">Enter Username</string>
    <string name="txt_register">Register</string>
    <string name="txt_enter_email">Enter Email</string>
    <string name="txt_enter_password">Enter Password</string>
    <string name="txt_enter_name">Enter Name</string>
    <string name="txt_login">Login</string>
    <string name="txt_already_have_an_account">Already have an account?</string>
    <string name="txt_name">Name</string>
    <string name="txt_description">Description</string>
    <string name="txt_active">Active</string>
    <string name="txt_inactive">Inactive</string>
    <string name="txt_price">Price</string>
    <string name="txt_quantity">Quantity</string>
    <string name="txt_add">Add</string>
    <string name="txt_select_address">Select Address</string>
    <string name="txt_select_district">Select District</string>
    <string name="txt_search_distributor">Search Distributor</string>
    <string name="txt_select_ward">Select Ward</string>
    <string name="txt_search">Search</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_save">Save</string>
    <string name="txt_address_result">Address Result</string>
    <string name="txt_address_result_detail">Address Result Detail</string>
    <string name="txt_add_distributor">Add distributor</string>
    <string name="txt_enter_distributor_name">Enter Distributor Name</string>
</resources>